--- a/SAFE_PARKING_FRONT/src/app/components/incidente/listar-admin-incidente/listar-admin-incidente.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/incidente/listar-admin-incidente/listar-admin-incidente.component.css
@@ -2,7 +2,6 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #f2f2f2;
-  
 }
 
 table {
@@ -10,17 +9,16 @@ table {
 }
 
 .container {
-  width: 50%;
+  width: 90%;
   padding: 20px;
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin: 0 auto;
   /* Centra horizontalmente */
-  margin-top: 50px;
 }
 
 h2 {
   color: #333;
-  padding: 40px;
+  padding-top:30px;
 }
