--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-admin-localizaciones/listar-admin-localizaciones.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-admin-localizaciones/listar-admin-localizaciones.component.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="litle">
-      <h2 style="text-align: center">Lista de localizaciones</h2>
+      <h2 style="text-align: center">LISTA DE LOCALIZACIONES</h2>
     </div>
 
     <div class="container">
@@ -78,23 +78,31 @@
         <ng-container matColumnDef="accion01">
           <th mat-header-cell *matHeaderCellDef>Acciones</th>
           <td mat-cell *matCellDef="let element">
-              <button mat-raised-button color="primary" [routerLink]="['ediciones', element.idLocalizacion]">
-                  <mat-icon>edit</mat-icon> Editar
-              </button>
+            <button
+              mat-raised-button
+              color="primary"
+              [routerLink]="['ediciones', element.idLocalizacion]"
+            >
+              <mat-icon>edit</mat-icon> Editar
+            </button>
           </td>
         </ng-container>
         <ng-container matColumnDef="accion02">
           <th mat-header-cell *matHeaderCellDef>Acciones</th>
           <td mat-cell *matCellDef="let element">
-              <button mat-raised-button color="warn" (click)="eliminar(element.idLocalizacion)">
-                  <mat-icon>delete</mat-icon> Eliminar
-              </button>
+            <button
+              mat-raised-button
+              color="warn"
+              (click)="eliminar(element.idLocalizacion)"
+            >
+              <mat-icon>delete</mat-icon> Eliminar
+            </button>
           </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
-      <br>
+      <br />
       <mat-paginator
         [pageSizeOptions]="[5, 10, 25, 100]"
         showFirstLastButtons
