--- a/SAFE_PARKING_FRONT/src/app/components/membresia/listar-admin-membresia/listar-admin-membresia.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/membresia/listar-admin-membresia/listar-admin-membresia.component.css
@@ -2,7 +2,7 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #f2f2f2;
-  
+
 }
 
 table {
@@ -10,7 +10,7 @@ table {
 }
 
 .container {
-  width: 50%;
+  width: 90%;
   padding: 20px;
   background-color: #fff;
   border-radius: 8px;
@@ -22,5 +22,5 @@ table {
 
 h2 {
   color: #333;
-  padding: 40px;
+  padding-top:30px;
 }
