--- a/SAFE_PARKING_FRONT/src/app/components/membresia/listar-admin-membresia/listar-admin-membresia.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/membresia/listar-admin-membresia/listar-admin-membresia.component.html
@@ -67,10 +67,10 @@
           <td mat-cell *matCellDef="let element">
             <button
               mat-raised-button
-              color="warn"
+              color="primary"
               [routerLink]="['ediciones', element.idMembresia]"
             >
-              Actualizar
+              <mat-icon>edit</mat-icon> Editar
             </button>
           </td></ng-container
         >
@@ -79,17 +79,17 @@
           <td mat-cell *matCellDef="let element">
             <button
               mat-raised-button
-              color="accent"
+              color="warn"
               (click)="eliminar(element.idMembresia)"
             >
-              Eliminar
+              <mat-icon>delete</mat-icon> Eliminar
             </button>
           </td></ng-container
         >
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
-      <br>
+      <br />
       <mat-paginator
         [pageSizeOptions]="[5, 10, 25, 100]"
         showFirstLastButtons
