--- a/SAFE_PARKING_FRONT/src/app/components/rol/listar-admin-rol/listar-admin-rol.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/rol/listar-admin-rol/listar-admin-rol.component.css
@@ -1,26 +1,25 @@
 /*Estilos del form*/
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
-    
+  font-family: Arial, sans-serif;
+  background-color: #f2f2f2;
+  height: 760px;
 }
 
 table {
-    background-color: rgb(255, 255, 255);
+  background-color: rgb(255, 255, 255);
 }
 
 .container {
-    width: 50%;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    margin: 0 auto;
-    /* Centra horizontalmente */
-    margin-top: 50px;
+  width: 90%;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin: 0 auto;
+  /* Centra horizontalmente */
 }
 
 h2 {
-    color: #333;
-    padding: 40px;
+  color: #333;
+  padding-top:30px;
 }
