--- a/SAFE_PARKING_FRONT/src/app/components/usuarios/listar-admin-usuario/listar-admin-usuario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/usuarios/listar-admin-usuario/listar-admin-usuario.component.html
@@ -15,7 +15,7 @@
         <br />
 
         <mat-form-field>
-          <input matInput (keyup)=filter($event) placeholder="buscar"/>
+          <input matInput (keyup)="filter($event)" placeholder="buscar" />
         </mat-form-field>
 
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
@@ -23,7 +23,7 @@
               The actual rendered columns are set as a property on the row definition" -->
 
           <!-- Position Column -->
-          <ng-container matColumnDef="codigo">
+          <ng-container matColumnDef="codigo" sticky>
             <th mat-header-cell *matHeaderCellDef>ID</th>
             <td mat-cell *matCellDef="let element">
               {{ element.idUsuario }}
@@ -116,29 +116,33 @@
             </td>
           </ng-container>
 
-          <ng-container matColumnDef="modificar">
+          <ng-container matColumnDef="modificar" stickyEnd>
+            <th mat-header-cell *matHeaderCellDef>Acciones</th>
+            <td mat-cell *matCellDef="let element">
+              <button
+                mat-raised-button
+                color="primary"
+                [routerLink]="[
+                  '/usuarios/modificar_usuarios/',
+                  element.idUsuario
+                ]"
+              >
+                <mat-icon>edit</mat-icon> Editar
+              </button>
+            </td></ng-container
+          >
+          <ng-container matColumnDef="eliminar" stickyEnd>
             <th mat-header-cell *matHeaderCellDef>Acciones</th>
             <td mat-cell *matCellDef="let element">
               <button
                 mat-raised-button
                 color="warn"
-                [routerLink]="['/usuarios/modificar_usuarios/', element.idUsuario]"
+                (click)="eliminar(element.idUsuario)"
               >
-                Actualizar
+                <mat-icon>delete</mat-icon> Eliminar
               </button>
             </td></ng-container
           >
-          <ng-container matColumnDef="eliminar">
-            <th mat-header-cell *matHeaderCellDef>Acciones</th>
-            <td mat-cell *matCellDef="let element">
-              <button
-                mat-raised-button
-                color="accent"
-                (click)="eliminar(element.idUsuario)"
-              >
-                Eliminar
-              </button>
-            </td></ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
