Actualizacion de estilos (Backgrounds)

--- a/SAFE_PARKING_FRONT/src/app/app.component.html
+++ b/SAFE_PARKING_FRONT/src/app/app.component.html
@@ -1,1 +1,16 @@
 <app-home></app-home>
+<!--Fuente [Inter] [H1 - 800]-->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet">
+
+<!--Fuente [Inter] [H2 - 600]-->
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap" rel="stylesheet">
+
+<!--Fuente [Inter] [H3 - 400]-->
+
+<link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+
+<!--Fuente [Inter] [p - 300]-->
+
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
