--- a/SAFE_PARKING_FRONT/src/app/components/membresia/buscar-membresia/buscar-membresia.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/membresia/buscar-membresia/buscar-membresia.component.css
@@ -1,4 +1,7 @@
 /* Estilos para la sección del formulario genérico */
+body{
+  background: linear-gradient(to right, #11998e, #38ef7d); 
+}
 .form {
   background-color: #f0f0f0;
   border: 2px solid #000000;
