--- a/SAFE_PARKING_FRONT/src/app/components/comentario/creaedita-comentario/creaedita-comentario.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/comentario/creaedita-comentario/creaedita-comentario.component.css
@@ -10,7 +10,7 @@
 }
 body {
   font-family: Arial, sans-serif;
-  background-color: #f2f2f2;
+  background: linear-gradient(to right, #11998e, #38ef7d);
   height: 100%;
   padding: 20px;
 }
