--- a/SAFE_PARKING_FRONT/src/app/components/home-arrendador/home-arrendador.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/home-arrendador/home-arrendador.component.css
@@ -1,7 +1,32 @@
 body {
-    font-family: Arial, sans-serif;
     background-color: #f2f2f2;
     margin-left: 300px; /*Tomar en cuenta esto*/
+  }
+
+/*Estilos de la fuente - Titulos y textos*/
+h1 {
+    font-size: 24px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 600;
+    padding-top: 30px;
+  }
+  
+  h2 {
+    font-size: 20px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 600;
+  }
+  
+  h3 {
+    font-size: 18px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 600;
+  }
+  
+  p {
+    font-size: 16px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
   }
 
 /*Contenido principal*/
