--- a/SAFE_PARKING_FRONT/src/app/components/horario/buscar-horario/buscar-horario.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/horario/buscar-horario/buscar-horario.component.css
@@ -12,7 +12,9 @@
   align-items: center; /* Centrar horizontalmente */
 }
 
-
+body{
+  background: linear-gradient(to right, #11998e, #38ef7d);
+}
 .generic-group label {
   font-weight: bold;
   margin-bottom: 5px;
