--- a/SAFE_PARKING_FRONT/src/app/components/incidente/buscar-incidente/buscar-incidente.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/incidente/buscar-incidente/buscar-incidente.component.css
@@ -11,7 +11,9 @@
   justify-content: center; /* Centrar verticalmente */
   align-items: center; /* Centrar horizontalmente */
 }
-
+body{
+  background: linear-gradient(to right, #11998e, #38ef7d);
+}
 
 .generic-group label {
   font-weight: bold;
