--- a/SAFE_PARKING_FRONT/src/app/components/incidente/creaedita-incidente/creaedita-incidente.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/incidente/creaedita-incidente/creaedita-incidente.component.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #f2f2f2;
+  background: linear-gradient(to right, #11998e, #38ef7d); 
 }
 
 
