--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/buscar-localizaciones/buscar-localizaciones.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/buscar-localizaciones/buscar-localizaciones.component.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #f7f7f7;
+  background: linear-gradient(to right, #11998e, #38ef7d);
   color: #333;
 }
 
