--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/creaedita-localizaciones/creaedita-localizaciones.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/creaedita-localizaciones/creaedita-localizaciones.component.css
@@ -15,7 +15,7 @@ h2{
 }
 body {
   font-family: Arial, sans-serif;
-  background-color: #f2f2f2;
+  background: linear-gradient(to right, #11998e, #38ef7d); 
   height: 1200px;
   padding: 20px;
 }
