--- a/SAFE_PARKING_FRONT/src/app/components/navbar-arrendador/navbar-arrendador.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/navbar-arrendador/navbar-arrendador.component.css
@@ -1,116 +1,124 @@
 /*Barra de navegacion Lateral-----------------*/
 .logo {
-    margin: 0px;
-    font-weight: bold;
-    color: white;
-    font-size: large;
-    /* Utilizamos display: flex */
-    text-align: center;
-    margin: 15px;
-  }
-  
-  /* Estilos del sidenav */
-  .sidenav {
-    width: 250px;
-    height: 100%;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #1f1f1f;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  }
-  
-  .sidenav label:hover {
-    color: #f1f1f1;
-    background-color: #555555;
-    transition: 200ms;
-    border-radius: 7px;
-  }
-  
-  /* Estilos para los elementos de menú y submenús */
-  .menu {
-    cursor: pointer;
-    font-size: 18px;
-    color: #fff;
-    margin: 0;
-    padding: 10px 0;
-    display: flex;
-    /* Utilizamos display: flex */
-    align-items: center;
-    /* Centra verticalmente los elementos dentro del label */
-    line-height: 2; /* Ajusta la altura de línea para centrar verticalmente */
-  
-  }
-  
-  .menu i.material-icons {
-    margin-right: 8px;
-    /* Espacio entre el icono y el texto */
-  }
-  
-  
-  .menu-toggle {
-    display: none;
-  }
-  
-  .sub-menu {
-    list-style: none;
-    padding: 0;
-    display: none;
-    max-height: 0; /* Agrega una altura máxima inicial de 0 */
-    overflow: hidden; /* Oculta el contenido que excede la altura máxima */
-    transition: max-height 0.3s ease; /* Agrega una transición para max-height */
-  }
-  
-  .sub-menu li {
-    margin: 10px 0;
-  }
-  
-  .sub-menu a {
-    padding: 15px 8px 15px 32px;
-    text-decoration: none;
-    font-size: 20px;
-    color: #d8d8d8;
-    display: block;
-   
-  }
-  
-  .sub-menu a:hover {
-    color: #f1f1f1;
-    transition: 200ms;
-    background-color: #555555;
-    margin-left: 10px;
-    border-radius: 7px;
-  }
-  
-  .menu-toggle:checked+label+.sub-menu {
-    display: block;
-    max-height: 100%; /* Despliega el submenú al hacer clic */
-  }
-  
-  /*FIN de Barra de navegacion Lateral-----------------*/
-   /*Flechas de despliegue en el menu*/
-   .icon-down {
-    display: inline-block;
-    align-items: center;
-    margin-left: auto; /* Mueve el contenedor de flechas hacia la derecha */
-  }
-  
-  .icon-up {
-    display: none;
-    
-    align-items: center;
-    margin-left: auto; /* Mueve el contenedor de flechas hacia la derecha */
-  }
-  
-  .menu-toggle:checked+label .icon-down {
-    display: none;
-  }
-  
-  .menu-toggle:checked+label .icon-up {
-    display: inline-block;
-    display: flex; /* Alinea las flechas a la derecha */
-  }
+  margin: 0px;
+  font-weight: bold;
+  color: white;
+  font-size: large;
+  /* Utilizamos display: flex */
+  text-align: center;
+  margin: 15px;
+}
 
-  /*Fin de Flechas de despliegue en el menu*/
+/* Estilos del sidenav */
+.sidenav {
+  width: 250px;
+  height: 100%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #1f1f1f;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.sidenav label:hover {
+  color: #f1f1f1;
+  background-color: #555555;
+  transition: 200ms;
+  border-radius: 7px;
+}
+
+/* Estilos para los elementos de menú y submenús */
+.menu {
+  cursor: pointer;
+  font-size: 18px;
+  color: #fff;
+  margin: 0;
+  padding: 10px 0;
+  display: flex;
+  /* Utilizamos display: flex */
+  align-items: center;
+  /* Centra verticalmente los elementos dentro del label */
+  line-height: 2;
+  /* Ajusta la altura de línea para centrar verticalmente */
+
+}
+
+.menu i.material-icons {
+  margin-right: 8px;
+  /* Espacio entre el icono y el texto */
+}
+
+
+.menu-toggle {
+  display: none;
+}
+
+.sub-menu {
+  list-style: none;
+  padding: 0;
+  display: none;
+  max-height: 0;
+  /* Agrega una altura máxima inicial de 0 */
+  overflow: hidden;
+  /* Oculta el contenido que excede la altura máxima */
+  transition: max-height 0.3s ease;
+  /* Agrega una transición para max-height */
+}
+
+.sub-menu li {
+  margin: 10px 0;
+}
+
+.sub-menu a {
+  padding: 15px 8px 15px 32px;
+  text-decoration: none;
+  font-size: 20px;
+  color: #d8d8d8;
+  display: block;
+
+}
+
+.sub-menu a:hover {
+  color: #f1f1f1;
+  transition: 200ms;
+  background-color: #555555;
+  margin-left: 10px;
+  border-radius: 7px;
+}
+
+.menu-toggle:checked+label+.sub-menu {
+  display: block;
+  max-height: 100%;
+  /* Despliega el submenú al hacer clic */
+}
+
+/*FIN de Barra de navegacion Lateral-----------------*/
+/*Flechas de despliegue en el menu*/
+.icon-down {
+  display: inline-block;
+  align-items: center;
+  margin-left: auto;
+  /* Mueve el contenedor de flechas hacia la derecha */
+}
+
+.icon-up {
+  display: none;
+
+  align-items: cnter;
+  margin-left: auto;
+  /* Mueve el contenedor de flechas hacia la derecha */
+}
+
+.menu-toggle:checked+label .icon-down {
+  display: none;
+}
+
+.menu-toggle:checked+label .icon-up {
+  display: inline-block;
+  display: flex;
+  /* Alinea las flechas a la derecha */
+}
+
+/*Fin de Flechas de despliegue en el menu*/
