--- a/SAFE_PARKING_FRONT/src/app/components/reserva-estacionamiento/creaedita-reserva-estacionamiento/creaedita-reserva-estacionamiento.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/reserva-estacionamiento/creaedita-reserva-estacionamiento/creaedita-reserva-estacionamiento.component.css
@@ -1,7 +1,7 @@
 /* Estilos generales */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
+    background: linear-gradient(to right, #11998e, #38ef7d);
     height: 100%;
     padding: 20px;
 }
