--- a/SAFE_PARKING_FRONT/src/app/components/rol/creaedita-rol/creaedita-rol.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/rol/creaedita-rol/creaedita-rol.component.css
@@ -1,7 +1,7 @@
 /* Estilos generales */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
+    background: linear-gradient(to right, #11998e, #38ef7d); 
     padding: 20px;
 }
 
