Ultima actualizacion de estilos

--- a/SAFE_PARKING_FRONT/src/app/components/estacionamiento/creaedita-estacionamiento/creaedita-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/estacionamiento/creaedita-estacionamiento/creaedita-estacionamiento.component.html
@@ -171,8 +171,9 @@
             </div>
           </div>
         </div>
-        <button mat-raised-button color="primary">Registrar</button>
-      </form>
+        <div class="btn-container">
+          <button mat-raised-button color="primary">Registrar</button>
+        </div>      </form>
     </div>
   </body>
 </html>
