--- a/SAFE_PARKING_FRONT/src/app/components/horario-estacionamiento/creaedita-horario-estacionamiento/creaedita-horario-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/horario-estacionamiento/creaedita-horario-estacionamiento/creaedita-horario-estacionamiento.component.html
@@ -43,8 +43,9 @@
           </mat-error>
         </mat-form-field>
 
-        <button mat-raised-button color="primary">Aceptar</button>
-
+        <div class="btn-container">
+          <button mat-raised-button color="primary">Registrar</button>
+        </div>
         <p>{{ mensaje }}</p>
       </form>
     </div>
