--- a/SAFE_PARKING_FRONT/src/app/components/incidente/creaedita-incidente/creaedita-incidente.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/incidente/creaedita-incidente/creaedita-incidente.component.css
@@ -77,3 +77,8 @@ button.boton_registro:hover {
 mat-error {
   color: #e74c3c;
 }
+
+.botonRegistro{
+  background-color: #11998e;
+  color: #fff;
+}
