--- a/SAFE_PARKING_FRONT/src/app/components/incidente/creaedita-incidente/creaedita-incidente.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/incidente/creaedita-incidente/creaedita-incidente.component.html
@@ -72,7 +72,7 @@
           </mat-form-field>
 
           <br />
-          <button mat-raised-button color="primary">Registrar</button>
+          <button class = "botonRegistro" mat-raised-button color="primary">Registrar</button>
         </form>
       </div>
     </div>
