--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/creaedita-localizaciones/creaedita-localizaciones.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/creaedita-localizaciones/creaedita-localizaciones.component.html
@@ -117,8 +117,9 @@
         </div>
 
         <div id="map" style="height: 400px"></div>
-        <button mat-raised-button color="primary">REGISTRAR</button>
-      </form>
+        <div class="btn-container">
+          <button mat-raised-button color="primary">Registrar</button>
+        </div>      </form>
     </div>
   </body>
 </html>
