--- a/SAFE_PARKING_FRONT/src/app/components/pago/creaedita-pago/creaedita-pago.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/pago/creaedita-pago/creaedita-pago.component.html
@@ -67,8 +67,9 @@
                 </mat-error>
             </mat-form-field>
             <br />
-            <button mat-raised-button color="primary">Registrar</button>
-
+            <div class="btn-container">
+                <button mat-raised-button color="primary">Registrar</button>
+              </div>
             <p>{{ mensaje }}</p>
         </form>
     </div>
