--- a/SAFE_PARKING_FRONT/src/app/components/reserva-estacionamiento/creaedita-reserva-estacionamiento/creaedita-reserva-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/reserva-estacionamiento/creaedita-reserva-estacionamiento/creaedita-reserva-estacionamiento.component.html
@@ -91,10 +91,9 @@
           </mat-error>
         </mat-form-field>
         <br />
-        <button mat-raised-button color="primary">Registrar</button>
-        <button mat-raised-button color="warn" routerLink="/reservaestacionamiento/listar_admin_reserva_estacionamientos">
-          Cancelar
-        </button>
+        <div class="btn-container">
+          <button mat-raised-button color="primary">Registrar</button>
+        </div>
       </form>
     </div>
   </div>
