--- a/SAFE_PARKING_FRONT/src/app/components/rol/creaedita-rol/creaedita-rol.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/rol/creaedita-rol/creaedita-rol.component.css
@@ -34,4 +34,10 @@ mat-form-field {
 
 button {
     margin: 10px;
+    
 }
+
+.botonRegistro{
+    background-color: #11998e;
+    color: #fff;
+  }
