--- a/SAFE_PARKING_FRONT/src/app/components/rol/creaedita-rol/creaedita-rol.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/rol/creaedita-rol/creaedita-rol.component.html
@@ -45,7 +45,7 @@
         </mat-error>
       </mat-form-field>
       <br />
-      <button mat-raised-button color="primary">Registrar</button>
+      <button class = "botonRegistro" mat-raised-button color="primary">Registrar</button>
 
       <p>{{ mensaje }}</p>
     </form>
