--- a/SAFE_PARKING_FRONT/src/app/components/usuarios/creaedita-usuario/creaedita-usuario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/usuarios/creaedita-usuario/creaedita-usuario.component.html
@@ -184,7 +184,7 @@
             </div>
           </div>
           <div class="botones">
-            <button mat-raised-button color="primary">Aceptar</button>
+            <button class = "botonRegistro" mat-raised-button color="primary">Registrar</button>
             <p>{{ mensaje }}</p>
           </div>
         </form>
