--- a/SAFE_PARKING_FRONT/src/app/components/vehiculos/creaedita-vehiculos/creaedita-vehiculos.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/vehiculos/creaedita-vehiculos/creaedita-vehiculos.component.html
@@ -107,7 +107,7 @@
       </div>
 
       <div class="btn-container">
-        <button mat-raised-button color="primary">Registrar</button>
+        <button class = "botonRegistro" mat-raised-button color="primary">Registrar</button>
       </div>
     </form>
   </div>
