--- a/SAFE_PARKING_FRONT/src/app/components/comentario/creaedita-comentario/creaedita-comentario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/comentario/creaedita-comentario/creaedita-comentario.component.html
@@ -66,7 +66,9 @@
             <br />
 
             <br />
-            <button mat-raised-button color="primary">Aceptar</button>
+            <div class="btn-container">
+                <button mat-raised-button color="primary">Registrar</button>
+              </div>
             <!--<button mat-raised-button color="warn" routerLink="/comentarios">
                 Cancelar
             </button>-->
