--- a/SAFE_PARKING_FRONT/src/app/components/estacionamiento/creaedita-estacionamiento/creaedita-estacionamiento.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/estacionamiento/creaedita-estacionamiento/creaedita-estacionamiento.component.css
@@ -64,3 +64,7 @@ input[type="file"] {
   background-color: rgb(173, 173, 182);
 }
 
+.btn-container button {
+  background-color: #11998e;
+  color: #fff;
+}
