--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/creaedita-localizaciones/creaedita-localizaciones.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/creaedita-localizaciones/creaedita-localizaciones.component.css
@@ -63,3 +63,9 @@ button[color="warn"] {
   margin-top: 20px;
   height: 400px;
 }
+
+
+.btn-container button {
+  background-color: #11998e;
+  color: #fff;
+}
