--- a/SAFE_PARKING_FRONT/src/app/components/usuarios/creaedita-usuario/creaedita-usuario.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/usuarios/creaedita-usuario/creaedita-usuario.component.css
@@ -21,7 +21,10 @@ body {
 button {
     margin: 10px;
 }
-
+.botonRegistro{
+    background-color: #11998e;
+    color: #fff;
+  }
 .example-form{
   max-height: 600px;
   background-color: white;
@@ -42,8 +45,8 @@ button {
 
 }
 .secciones{
-  margin: 5px;
-  width: 70%; /* Expand to full width */
+    margin: 15px;
+    width: 70%; /* Expand to full width */
   background-color: rgb(221, 221, 221);
   align-items: center;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
