--- a/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.html
@@ -234,7 +234,7 @@
         </li>
         <li>
           <a href="reservaestacionamiento/buscar-reserva-estacionamiento"
-            >Buscar reservas</a
+            >Buscar reserva</a
           >
         </li>
       </ul>
