--- a/SAFE_PARKING_FRONT/src/app/components/comentario/buscar-comentarios/buscar-comentarios.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/comentario/buscar-comentarios/buscar-comentarios.component.css
@@ -4,13 +4,16 @@ body {
   }
 
   .search-form {
-      background-color: #f0f0f0;
-      border: 2px solid #000000;
-      border-radius: 10px;
-      padding: 20px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      width: 800px;
-      margin: 0 auto;
+    background-color: #f0f0f0;
+    border: 2px solid #000000;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    width: 800px;
+    margin: 100px auto; /* Centrar horizontalmente */
+    flex-direction: column;
+    justify-content: center; /* Centrar verticalmente */
+    align-items: center; /* Centrar horizontalmente */
     }
 
     .form-group label {
