--- a/SAFE_PARKING_FRONT/src/app/components/reserva-estacionamiento/buscar-reserva-estacionamiento/buscar-reserva-estacionamiento.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/reserva-estacionamiento/buscar-reserva-estacionamiento/buscar-reserva-estacionamiento.component.css
@@ -11,8 +11,11 @@
     justify-content: center; /* Centrar verticalmente */
     align-items: center; /* Centrar horizontalmente */
   }
-  
 
+body{
+  background: linear-gradient(to right, #11998e, #38ef7d);
+
+}
 .generic-group label {
     font-weight: bold;
     margin-bottom: 5px;
