--- a/SAFE_PARKING_FRONT/src/app/components/reserva-estacionamiento/buscar-reserva-estacionamiento/buscar-reserva-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/reserva-estacionamiento/buscar-reserva-estacionamiento/buscar-reserva-estacionamiento.component.html
@@ -1,4 +1,3 @@
-<app-navbar></app-navbar>
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,10 +6,18 @@
     <title>Document</title>
   </head>
   <body>
+    <app-navbar></app-navbar>
+
     <div class="form">
       <div class="generic-group">
-        <label for="inputId">Ingrese el ID de la reserva por estacionamiento:</label>
-        <input id="inputId" type="number" [(ngModel)]="idReserva_Estacionamiento" />
+        <label for="inputId"
+          >Ingrese el ID de la reserva por estacionamiento:</label
+        >
+        <input
+          id="inputId"
+          type="number"
+          [(ngModel)]="idReserva_Estacionamiento"
+        />
         <mat-error *ngIf="idNoEncontrado"
           >El ID ingresado no existe. Por favor, intente con otro ID.</mat-error
         >
@@ -18,9 +25,11 @@
         <button (click)="buscar()">Buscar</button>
       </div>
       <hr />
-      
+
       <div class="generic-details" *ngIf="reserva_estacionamiento">
-        <h2 class="generic-heading">Detalles de la reserva por estacionamiento</h2>
+        <h2 class="generic-heading">
+          Detalles de la reserva por estacionamiento
+        </h2>
         <div class="generic-box">
           <h1>Estado de reserva</h1>
           <p>{{ reserva_estacionamiento.estado }}</p>
@@ -34,17 +43,22 @@
           <p>{{ reserva_estacionamiento.fecha }}</p>
         </div>
         <div class="generic-box">
-            <h1>Usuario</h1>
-            <p>{{ reserva_estacionamiento.users.nombre }}</p>
-          </div>
-          <div class="generic-box">
-            <h1>Vehiculo [Placa]</h1>
-            <p>{{ reserva_estacionamiento.vehiculo.placaVehiculo }}</p>
-          </div>
-          <div class="generic-box">
-            <h1>Horario de estacionamiento ID</h1>
-            <p>{{ reserva_estacionamiento.horarioEstacionamiento.idHorarioEstacionamiento }}</p>
-          </div>
+          <h1>Usuario</h1>
+          <p>{{ reserva_estacionamiento.users.nombre }}</p>
+        </div>
+        <div class="generic-box">
+          <h1>Vehiculo [Placa]</h1>
+          <p>{{ reserva_estacionamiento.vehiculo.placaVehiculo }}</p>
+        </div>
+        <div class="generic-box">
+          <h1>Horario de estacionamiento ID</h1>
+          <p>
+            {{
+              reserva_estacionamiento.horarioEstacionamiento
+                .idHorarioEstacionamiento
+            }}
+          </p>
+        </div>
       </div>
     </div>
   </body>
