--- a/SAFE_PARKING_FRONT/src/app/components/rol/buscar-rol/buscar-rol.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/rol/buscar-rol/buscar-rol.component.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-
   <body>
     <app-navbar></app-navbar>
 
@@ -21,7 +20,7 @@
       </div>
       <hr />
       <div class="generic-details" *ngIf="rol">
-        <h2 class="generic-heading">Detalles</h2>
+        <h2 class="generic-heading">Detalles de Rol</h2>
         <div class="generic-box">
           <h1>Tipo de Rol</h1>
           <p>{{ rol.nombreRol }}</p>
