--- a/SAFE_PARKING_FRONT/src/app/components/usuarios/buscar-usuarios/buscar-usuarios.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/usuarios/buscar-usuarios/buscar-usuarios.component.html
@@ -1,47 +1,45 @@
-<app-navbar></app-navbar>
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
+  </head>
+  <body>
+    <app-navbar></app-navbar>
+
     <div class="search-form">
-        <div class="form-group">
-          <label for="incidenteIdInput">Ingrese el ID del usuario:</label>
-          <input id="incidenteIdInput" type="number" [(ngModel)]="idUsuario" />
-          <button (click)="buscar()">Buscar</button>
-        </div>
-        <hr />
-        <div class="incidente-details" *ngIf="usu">
-          <h2 class="details-heading">Detalles del Usuario</h2>
-          <div class="info-box">
-            <h1>Nombre del usuario</h1>
-            <p>{{ usu.nombre}}</p>
-          </div>
-          <div class="info-box">
-            <h1>Apellido del usuario</h1>
-            <p>{{ usu.apellido }}</p>
-          </div>
-          <div class="info-box">
-            <h1>Correo del usuario</h1>
-            <p>{{ usu.correo }}</p>
-          </div>
-          <div class="info-box">
-            <h1>DNI del usuario</h1>
-            <p>{{ usu.dni }}</p>
-          </div>
-          <div class="info-box">
-            <h1>Membresia del usuario</h1>
-            <p>{{ usu.membresia.tipoMembresia }}</p>
-          </div>
-    
-          <!-- Agrega más campos según la estructura de tu objeto Vehiculo -->
-        </div>
+      <div class="form-group">
+        <label for="incidenteIdInput">Ingrese el ID del usuario:</label>
+        <input id="incidenteIdInput" type="number" [(ngModel)]="idUsuario" />
+        <button (click)="buscar()">Buscar</button>
       </div>
+      <hr />
+      <div class="incidente-details" *ngIf="usu">
+        <h2 class="details-heading">Detalles del Usuario</h2>
+        <div class="info-box">
+          <h1>Nombre del usuario</h1>
+          <p>{{ usu.nombre }}</p>
+        </div>
+        <div class="info-box">
+          <h1>Apellido del usuario</h1>
+          <p>{{ usu.apellido }}</p>
+        </div>
+        <div class="info-box">
+          <h1>Correo del usuario</h1>
+          <p>{{ usu.correo }}</p>
+        </div>
+        <div class="info-box">
+          <h1>DNI del usuario</h1>
+          <p>{{ usu.dni }}</p>
+        </div>
+        <div class="info-box">
+          <h1>Membresia del usuario</h1>
+          <p>{{ usu.membresia.tipoMembresia }}</p>
+        </div>
 
-
-</body>
+        <!-- Agrega más campos según la estructura de tu objeto Vehiculo -->
+      </div>
+    </div>
+  </body>
 </html>
